gitops/apps/zitadel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zitadel
  annotations:
    external-dns.alpha.kubernetes.io/target: 550e0dbd-4087-47b2-ba9e-e5622e40b399.cfargotunnel.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    cert-manager.io/cluster-issuer: bealvio
  labels:
    probe: enabled
spec:
  ingressClassName: external
  rules:
    - host: 'zitadel.bealv.io'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zitadel
                port:
                  number: 8080
  tls:
    - hosts:
        - 'zitadel.bealv.io'
      secretName: zitadel-tls
